import org.gradle.internal.jvm.Jvm

plugins {
    id 'java-library'
    id 'checkstyle'
    id 'net.ltgt.errorprone' version '0.0.16'
    id 'com.bmuschko.nexus' version '2.3.1'
    id 'io.codearte.nexus-staging' version '0.8.0'
    id 'com.github.johnrengelman.shadow' version '2.0.4'
}

group = 'com.imsweb'
version = file('VERSION').text.trim()
description = 'Cancer-related synthetic data generator.'
sourceCompatibility = JavaVersion.VERSION_1_8

println "Starting build using ${Jvm.current()}"

repositories {
    mavenCentral()
}

dependencies {
    api 'com.imsweb:layout:1.12'

    implementation 'com.imsweb:algorithms:1.16'
    implementation 'com.imsweb:staging-client-java:4.1'
    implementation 'com.imsweb:staging-algorithm-cs:02.05.50'
    implementation 'org.apache.commons:commons-lang3:3.7'

    testImplementation 'junit:junit:4.12'

    errorprone 'com.google.errorprone:error_prone_core:2.3.1'
}

// enforce UTF-8, display the compilation warnings
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xlint:unchecked' << '-Xlint:deprecation'
}

// the Javadoc was made way too strict in Java 8 and it's not worth the time fixing everything!
tasks.withType(Javadoc) {
    options.addStringOption('Xdoclint:none', '-quiet')
}

// customize the manifest
jar {
    manifest {
        attributes('Implementation-Title': project.name,
                'Implementation-Version': version,
                'Implementation-Vendor': 'Information Management Services Inc.',
                'Created-By': System.properties['java.vm.version'] + ' (' + System.properties['java.vm.vendor'] + ')',
                'Built-By': System.getProperty('user.name'),
                'Built-Date': new Date(),
                'Built-JDK': System.getProperty('java.version'),
                'Automatic-Module-Name': 'com.imsweb.datagenerator',
                'Main-Class': 'com.imsweb.datagenerator.gui.StandaloneNaaccrDataGenerator')
    }
    from ('VERSION') {
        rename 'VERSION', 'DATA-GENERATOR-VERSION'
    }
    from ('LICENSE') {
        rename 'LICENSE', 'DATA-GENERATOR-LICENSE'
    }
}

// we don't want these files in the "all" jar, it's confusing
shadowJar {
    exclude('XMLPULL_1_1_3_1_VERSION')
    exclude('XPP3_1.1.4c_MIN_VERSION')
    from('VERSION') {
        rename 'VERSION', 'DATA-GENERATOR-VERSION'
    }
    from('LICENSE') {
        rename 'LICENSE', 'DATA-GENERATOR-LICENSE'
    }
}

// checkstyle plugin settings
checkstyle {
    ignoreFailures = true
    configFile = file('config/checkstyle/checkstyle.xml')
}

// needed to deploy to Maven Central
modifyPom {
    project {
        name 'Synthetic data generator.'
        description 'This Java library can be used to create synthetic data files.'
        url 'https://github.com/imsweb/data-generator'
        inceptionYear '2016'

        scm {
            url 'https://github.com/imsweb/data-generator'
            connection 'scm:https://github.com/imsweb/data-generator.git'
            developerConnection 'scm:git@github.com:imsweb/data-generator.git'
        }

        licenses {
            license {
                name 'A modified BSD License (BSD)'
                url 'https://github.com/imsweb/data-generator/blob/master/LICENSE'
                distribution 'repo'
            }
        }

        developers {
            developer {
                id 'depryf'
                name 'Fabian Depry'
                email 'depryf@imsweb.com'
            }
            developer {
                id 'nakamurae'
                name 'Nakamur Eric'
                email 'nakamurae@imsweb.com'
            }
        }
    }
}

// don't try to release a snapshot to a non-snapshot repository, that won't work anyway
if (version.endsWith('-SNAPSHOT'))
    gradle.startParameter.excludedTaskNames += 'closeAndReleaseRepository'

// Gradle wrapper, this allows to build the project without having to install Gradle...
wrapper {
    gradleVersion = '4.9'
}


